--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "include/asio_net/rpc_core"]
 	path = include/asio_net/rpc_core
-	url = https//github.com:shuai132/rpc_core.git
+	url = https//github.com/dvescovi1/rpc_core.git
